--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Habibur Rahman</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -143,7 +143,7 @@
         </div>
     </div>
 
-    <footer id="footer"> <!-- Add an id to the footer -->
+    <footer id="footer"> 
         <div class="footer">
             <div>
                 <h3>An Open Commitment by Habibur Rahman</h3>
