--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 "In the near future, I hope to <br> become a Developer."
             </h2>
             <p>Web development is a dynamic and evolving field that empowers individuals to create and manage websites and applications. My journey into coding has equipped me with essential skills in HTML, CSS, and JavaScript.</p>
-            <a href="#footer" class="button">Contact Me</a>
+            <button><a href="#footer" class="button">Contact Me</a></button>
         </div>
     </div>
     <!-- hero area end -->
