added link to html

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <img src="images/html.png" alt="">
             <h2>HTML</h2>
             <p>HTML (HyperText Markup Language) is the backbone of web development. It allows us to structure content and define the layout of web pages.</p>
-            <a href="#">Learn More</a>
+            <a href="https://www.w3schools.com/html/">Learn More</a>
         </div>
         <div class="html-1">
             <img src="images/css.png" alt="">
