--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <img src="images/css.png" alt="">
             <h2>CSS</h2>
             <p>CSS (Cascading Style Sheets) is essential for styling web pages. It controls the look and feel of a website, allowing for beautiful designs.</p>
-            <a href="#">Learn More</a>
+            <a href="https://www.w3schools.com/css/">Learn More</a>
         </div>
         <div class="html-1">
             <img src="images/js.png" alt="">
