--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <img src="images/js.png" alt="">
             <h2>JavaScript</h2>
             <p>JavaScript brings websites to life with interactivity. It's used to create dynamic content, control multimedia, and much more.</p>
-            <a href="#">Learn More</a>
+            <a href="https://www.w3schools.com/js/">Learn More</a>
         </div>
     </div>
 
